--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,25 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+# Enable a small amount of optimization in debug mode
+[profile.dev]
+opt-level = 1
+
+# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
+[profile.dev.package."*"]
+opt-level = 3
+
 [dependencies]
+bevy = "0.11.0"
+ron = "0.8"
+serde = { version = "1", features = ["derive"] }
+asset_loader_derive ={ path = "crates/asset_loader_derive"}
+
+[workspace]
+resolver = "2" # Important! wgpu/Bevy needs this!
+members = ["crates/*"]
+
+[workspace.dependencies]
 bevy = "0.11.0"
 ron = "0.8"
 serde = { version = "1", features = ["derive"] }
