feat: remove `asset_loader_derive`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,13 +17,12 @@ opt-level = 3
 bevy = "0.11.0"
 ron = "0.8"
 serde = { version = "1", features = ["derive"] }
-asset_loader_derive ={ path = "crates/asset_loader_derive"}
 
-[workspace]
-resolver = "2" # Important! wgpu/Bevy needs this!
-members = ["crates/*"]
+# [workspace]
+# resolver = "2" # Important! wgpu/Bevy needs this!
+# members = ["crates/*"]
 
-[workspace.dependencies]
-bevy = "0.11.0"
-ron = "0.8"
-serde = { version = "1", features = ["derive"] }
+# [workspace.dependencies]
+# bevy = "0.11.0"
+# ron = "0.8"
+# serde = { version = "1", features = ["derive"] }
