--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ opt-level = 3
 
 [dependencies]
 bevy = "0.11.0"
+bevy_proto = "0.11.0"
 ron = "0.8"
 serde = { version = "1", features = ["derive"] }
 
